gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-non_lifetime_binders.rs
fn foo() where for<T> T:, {}
// { dg-error ".E0658." "" { target *-*-* } .-1 }

fn main() {}

